--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,13 +8,12 @@
             <div style="width: 110px; height: auto;">
                 <ion-img src="assets/oyaHorizontalBlack@3x.png"></ion-img>
             </div>
-
         </ion-title>
     </ion-toolbar>
 </ion-header>
 
 <ion-header [hidden]="!showBorder">
-    <ion-button class="oya-button-3 hidden-xs" style="position: absolute; left: 50%; top: 4px; transform: translateX(-50%); z-index: 999;" fill="solid" color="tertiary" shape="round">Signup and get 2GB</ion-button>
+    <ion-button class="oya-button-3 hidden-xs hidden-sm" style="position: absolute; left: 50%; top: 4px; transform: translateX(-50%); z-index: 999;" fill="solid" color="tertiary" shape="round">Signup and get 2GB</ion-button>
     <ion-toolbar>
         <ion-buttons slot="end">
             <ion-menu-button class="hidden-sm hidden-sm hidden-md hidden-lg hidden-xl"></ion-menu-button>
