--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -76,5 +76,8 @@
   --ion-color-light-tint: #f5f6f9;
 
   /** grey **/
-  --ion-color-grey: #4b4b4b
+  --ion-color-grey: #4b4b4b;
+
+  /** black **/
+  --ion-color-black: #323232;
 }
